# glimpsosd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: config.ron  style.css
src/: cli.rs  main.rs  osd.rs
src/daemon/: app.rs  cli.rs  mod.rs
src/logic/: mod.rs
src/logic/power/: battery.rs  mod.rs  profile.rs
src/model/: config.rs  event.rs  keyboard_backlight.rs  mod.rs  power_device.rs  power_profiles.rs
src/models/: power_profiles.rs
src/ui/: battery.rs  mod.rs  power_device.rs  power_profiles.rs
