[package]
name = "glimpsosd"
version = "0.1.0"
edition = "2024"

[dependencies]
futures-lite = "2.6.0"
gtk = { version = "0.9.6", package = "gtk4" }
gtkls = { version = "0.5.0", package = "gtk4-layer-shell" }
tokio = { version = "1.45.0", features = ["full"] }
zbus = { version = "5.7.0", features = ["tokio"] }
