[package]
name = "glimpsosd"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "glimpsosd"
path = "src/osd.rs"

[[bin]]
name = "glimpsosdctl"
path = "src/cli.rs"

[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1

[dependencies]
clap = { version = "4.5.38", features = ["derive", "env"] }
futures-lite = "2.6.0"
gtk = { version = "0.9.6", package = "gtk4" }
gtkls = { version = "0.5.0", package = "gtk4-layer-shell" }
ron = "0.10.1"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
zbus = { version = "5.7.0", features = ["tokio"] }
